--- a/src/styles/comic-card.css
+++ b/src/styles/comic-card.css
@@ -2,7 +2,7 @@
   background: #f1f1f1;
   border-radius: 5px;
   max-width: 20%;
-  height: 400px;
+  height: 450px;
   margin: 30px 20px;
   overflow: hidden;
   box-shadow: 2px 2px 10px rgba(0, 0, 0.3);
@@ -10,6 +10,7 @@
 }
 
 .info-card:hover {
+  /* transform: scale(1.05); */
   opacity: 1;
 }
 
@@ -36,7 +37,7 @@
   background-color: green;
   display: block;
   color: white;
-  padding: 5px;
+  padding: 3px;
   font-weight: 900;
   text-align: center;
 }
@@ -47,7 +48,60 @@
 
 .img-card {
   width: 100%;
-  height: 250px;
+  height: 230px;
+}
+
+.div-select-remove {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5px;
+  margin-bottom: 15px;
+}
+
+.select-btn {
+  border: 1px solid green;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px;
+  color: green;
+}
+
+.select-btn:hover {
+  background-color: green;
+  color: white;
+}
+
+.select-btn:disabled {
+  opacity: 0.4;
+  cursor: default;
+}
+
+.select-btn:disabled:hover {
+  background-color: white;
+  color: green;
+}
+
+.remove-btn {
+  border: 1px solid red;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px;
+  color: red;
+}
+
+.remove-btn:hover {
+  background-color: red;
+  color: white;
+}
+
+.remove-btn:disabled {
+  opacity: 0.4;
+  cursor: default;
+}
+
+.remove-btn:disabled:hover {
+  background-color: white;
+  color: red;
 }
 
 .description {
