--- a/src/styles/more-button.css
+++ b/src/styles/more-button.css
@@ -14,6 +14,16 @@
   font-weight: 900;
 }
 
+.more-btn-disable {
+  cursor: default;
+  border: 1px solid gray;
+  color: gray;
+  border-radius: 5px;
+  padding: 8px 25px;
+  font-size: 1.2em;
+  font-weight: 900;
+}
+
 .more-btn:hover {
   background-color: red;
   color: white;
